# P2PRecipeApp

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yaml
src/: cli.rs  main.rs
src/commands/: config.rs  peers.rs  recipe.rs
