[package]
name = "P2PRecipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "floodsub", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
log = "0.4"
pretty_env_logger = "0.5"