[package]
name = "P2PRecipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "floodsub", "mdns", "tokio", "macros"] }
libp2p-swarm = { version = "0.44", features = ["macros"] }  # Add this line
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.5"
once_cell = "1"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }